src/test/deca/codegen/valid/division.deca

// Description :
//      division 
//    1/4 = 0  3/2 = 1

// Resultats :
//    0
//    1

{
    println(1/4);
    println(3/2);
}