src/test/deca/codegen/invalid/div_by_0.deca
// Description :
//    erreur d'exécution attendue : division entière par zéro.

// Resultats :
//    Erreur à l'exécution
//    division par 0 

{
    int x = 0;
    println(1 / x);
}